Fixed navbar not showing up on some devices (hopefully)

--- a/src/sass/layout/_navigation.sass
+++ b/src/sass/layout/_navigation.sass
@@ -16,8 +16,9 @@ nav#menu
   z-index: 10
 
   &.loading
-    & > ul, & > a
-      visibility: hidden
+    display: flex
+  //   & > ul, & > a
+  //     visibility: hidden
 
   &:hover
     max-height: 300px
